Fixed the horizontal scroll

--- a/style.css
+++ b/style.css
@@ -2,19 +2,23 @@ img {
   width: 100%;
 }
 
-body {
-  max-width: 1400px;
-  margin: 0 auto;
+body {;
   background-color: #f4f5f6;
+
 }
 
 main {
   top: 3rem;
   z-index: 1;
+  min-width: 100%;
+  max-width: 100%;
 }
 
 nav {
   z-index: 2;
+  width:100%;
+  max-width: 100%;
+  width: 100%;
 }
 
 section {
@@ -24,11 +28,15 @@ section {
 
 .navbar1 {
   z-index: 100;
+
 }
 
 .navbar2 {
   background-color: white;
   top: 3rem;
+  max-width: 100%!important;
+  min-width: 100%!important;
+  width: 100%!important;
 }
 
 .navbar2 input {
@@ -191,13 +199,13 @@ p {
   color: orangered !important;
 }
 
-@media (min-width: 630px) {
+@media (min-width: 900px) {
   .weather {
     display: inline !important;
   }
 }
 
-@media (min-width: 840px) {
+@media (min-width: 700px) {
   .subscribe-link {
     margin-right: 1rem !important;
   }
@@ -420,6 +428,9 @@ p {
 }
 
 @media (min-width: 1100px) {
+
+
+
   .navbar {
     height: 6.5625rem !important;
   }
@@ -429,8 +440,8 @@ p {
     position: relative;
     height: 3rem !important;
     top: 6.5625rem;
-    width: 1400px;
-    min-width: 100%;
+    overflow:hidden;
+
   }
 
   .nav-subscribe {
@@ -503,4 +514,11 @@ p {
     margin-left: 0.4rem !important;
     margin-top: 0.8rem;
   }
+}
+
+@media(min-width: 1400px) {
+    body  {
+      max-width: 1400px;
+      margin:0 auto;
+    }
 }
